Docs: update setup instructions for release JAR
Guide users to launch release/fitlog.jar with Java 25, separate the optional source-build workflow, improve setup troubleshooting, and document the verified release artifact in the Developer Guide.